# godot-sandbox-robust-weight-transfer

./: .gitignore  AUTHORS.md  LICENSE.md  README.md  project.godot
addons/Godot-MToon-Shader/: inspector_mtoon.gd.uid  mtoon.gdshader.uid  mtoon_common.gdshaderinc.uid  mtoon_cull_off.gdshader.uid  mtoon_cutout.gdshader.uid  mtoon_cutout_cull_off.gdshader.uid  mtoon_outline.gdshader.uid  mtoon_outline_cutout.gdshader.uid  mtoon_outline_trans.gdshader.uid  mtoon_outline_trans_zwrite.gdshader.uid  mtoon_trans.gdshader.uid  mtoon_trans_cull_off.gdshader.uid  mtoon_trans_zwrite.gdshader.uid  mtoon_trans_zwrite_cull_off.gdshader.uid  plugin.gd.uid
addons/vrm/: import_vrm.gd.uid  importer_mesh_attributes.gd.uid  plugin.gd.uid  vrm_collider.gd.uid  vrm_collider_group.gd.uid  vrm_constants.gd.uid  vrm_extension.gd.uid  vrm_meta.gd.uid  vrm_options_post_import_plugin.gd.uid  vrm_secondary.gd.uid  vrm_spring_bone.gd.uid  vrm_spring_bone_logic.gd.uid  vrm_toplevel.gd.uid  vrm_utils.gd.uid
addons/vrm/1.0/: VRMC_materials_hdr_emissiveMultiplier.gd.uid  VRMC_materials_mtoon.gd.uid  VRMC_node_constraint.gd.uid  VRMC_springBone.gd.uid  VRMC_vrm.gd.uid  VRMC_vrm_animation.gd.uid
addons/vrm/node_constraint/: bone_node_constraint.gd.uid  bone_node_constraint_applier.gd.uid
json_diff_sample/: json_diff.elf.uid
json_diff_sample/robust_skin_weight_transfer/: .gitignore  .gitrepo  README.md
json_diff_sample/robust_skin_weight_transfer/src/: main.py
json_diff_sample/scenes/: node_3d.tscn
robust_weight_transfer/: generated_api.hpp.uid  readme.md  robust_weight_transfer.elf.uid
robust_weight_transfer/art/constraint_twist_sample/: VRM1_Constraint_Twist_Sample.vrm.import
robust_weight_transfer/core/: generate_api.gd  weight_transfer.gd  weight_transfer.gd.uid
robust_weight_transfer/robust_skin_weight_transfer/: CMakeLists.txt  README.md  compile.sh  generated_api.hpp  robust_weight_transfer.cpp  test_robust_weight_transfer.cpp  test_robust_weight_transfer.h
robust_weight_transfer/robust_skin_weight_transfer/src/: main.py
robust_weight_transfer/scenes/: node_3d.tscn  robust_weight_transfer_sample.tscn
